# fibermorph

./: .gitignore  Dockerfile  LICENSE  README.md  arc_sim.py  environment.yml  pyproject.toml  setup.py
.cache/v/cache/: lastfailed
.github/workflows/: test.yaml
analyze/: curvature.py  section.py
env/conda-meta/: history
fibermorph/: archit_update_module installation  base.py  curvature.py  curvature_new.py  demo.py  demo_new.py  dummy_data.py  fibermorph.py  fibermorph_old.py  section.py  section_new.py  sim_ellipse.py
fibermorph/demo/: demo.py
fibermorph/test/: test_fibermorph.py  test_fibermorph_examples.py
fibermorph/test/curv/: 027_demo_nocurv.tiff.REMOVED.git-id
fibermorph/test/function_unit_tests/: test_unit_analyze_all_curv.py  test_unit_analyze_each_curv.py  test_unit_analyze_section.py  test_unit_binarize_curv.py  test_unit_check_bin.py  test_unit_filter.py  test_unit_filter_curv.py  test_unit_prune.py  test_unit_remove_particles.py  test_unit_segment_section.py  test_unit_skeletonize.py  test_unit_subset_gen.py  test_unit_taubin_curv.py  test_unit_trim_outliers.py
fibermorph/test/results_cache/Jun08_1923_DemoTest_Curv/Jun08_1923_fibermorph_curvature/: curvature_summary_data_Jun08_1924.csv
fibermorph/test_data/SimArcData/: Oct06_1855_32_017780_arc_data.csv  Oct06_1855_32_017780_arc_data_errordata.csv
input_files/: consolidate_files_input.py  curvature_input.py  raw2gray_input.py  section_input.py
preprocessing/: consolidate_files.py  raw2gray.py
test/: curvature_test.py  dummy_data.py  empty_cache.py  section_test.py
(+15 files in other folders)
