[tool.poetry]
name = "fibermorph"
version = "0.3.1"
description = "Toolkit for analyzing hair fiber morphology"
authors = ["tinalasisi <tina.lasisi@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
joblib = "^1.3.2"
pandas = "^2.2.0"
pillow = "^10.2.0"
requests = "^2.31.0"
matplotlib = "^3.8.2"
rawpy = "^0.19.0"
shapely = "^2.0.2"
argparse = "^1.4.0"
tqdm = "^4.66.1"
scikit-image = "^0.22.0"
scikit-learn = "^1.4.0"
sympy = "^1.12"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">= 3.11"

[tool.poetry.scripts]
fibermorph = "fibermorph.fibermorph:main"

[project.urls]
"Homepage" = "https://github.com/tinalasisi/fibermorph"
